<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/title_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:layout_marginTop="130dp"
        android:textStyle="bold"
        android:text="@string/create_acc"
        android:textAppearance="@style/create_acc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:text="@string/desc_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_create_acc"
        app:layout_constraintVertical_bias="0.095"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/purple"
        android:text="@string/btn_create"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_an_a"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create"
        app:layout_constraintVertical_bias="0.123"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/img_line"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLine"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/have_account"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_signIn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_signin"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>