<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".ui.splashscreen.SplashScreenActivity">

    <ImageView
        android:id="@+id/imgsp"
        android:layout_width="179dp"
        android:layout_height="64dp"
        android:src="@drawable/imgsp1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/img1_description"/>

    <TextView
        android:id="@+id/idGroupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_group"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imgsp"
        app:layout_constraintEnd_toEndOf="@+id/imgsp"
        app:layout_constraintStart_toStartOf="@+id/imgsp"
        app:layout_constraintTop_toTopOf="@+id/imgsp"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:src="@drawable/iconsp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        android:contentDescription="@string/app_icon_description"/>

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iconImageView"
        app:layout_constraintBottom_toBottomOf="@id/iconImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>